# SkillScope

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PLANS.md  QUESTIONS.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  mypy.ini  pyproject.toml  ruff.toml  vercel.json
.codex/: PLANS.md  SCRATCHPAD.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.specstory/history/: 2025-10-17_18-31Z-commit-and-push-code-to-github.md
artifacts/: skillscope_demo_summary.json
dashboards/: grafana_skillscope.json
docs/: demo-kit.md  explainers.md  faq.md  help.md  index.md  overview.md  reporting.md  workflows.md
docs/plans/: 2026-02-15-demo-funnel-design.md  2026-02-15-demo-funnel-implementation.md  2026-02-15-release-ready-v1-design.md  2026-02-15-release-ready-v1.md  2026-02-15-replay-compare-studio.md
examples/: run_with_skill.py
examples/skills/brand-voice/: SKILL.md
examples/skills/brand_voice/: SKILL.md
ops/: collector-config.yaml  docker-compose.yaml  prometheus.yml  sample_metrics.prom
skillscope/: __init__.py  cli.py  example_data.py  exporters.py  instrumentation.py  normalization.py  semconv.py  skills.py
tests/: test_assets.py  test_cli.py  test_exporters.py  test_instrumentation.py  test_normalization.py  test_semconv.py
web/: README.md  package.json  playwright.config.ts  pnpm-lock.yaml
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: EmptyState.tsx  Shell.tsx
web/src/lib/: analyze.test.ts  analyze.ts  (+4 more)
web/tests/: home.spec.ts
(+8 files in other folders)
